[gd_scene load_steps=11 format=2]

[ext_resource path="res://VRScene.gd" type="Script" id=1]
[ext_resource path="res://ARVRCamera.gd" type="Script" id=2]
[ext_resource path="res://AreaHead.gd" type="Script" id=9]
[ext_resource path="res://audio/head_hit.wav" type="AudioStream" id=16]
[ext_resource path="res://RemoteInterface.gd" type="Script" id=18]

[sub_resource type="SphereShape" id=1]
radius = 0.2

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0.752941, 0, 0, 0.345098 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 1 )

[node name="VRScene" type="Spatial"]
script = ExtResource( 1 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
far = 200.0
script = ExtResource( 2 )

[node name="AreaHead" type="Area" parent="ARVROrigin/ARVRCamera"]
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="ARVROrigin/ARVRCamera/AreaHead"]
shape = SubResource( 1 )

[node name="hit_player" type="AudioStreamPlayer" parent="ARVROrigin/ARVRCamera/AreaHead"]
stream = ExtResource( 16 )
volume_db = 3.969

[node name="ScreenTint" type="MeshInstance" parent="ARVROrigin/ARVRCamera"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Blackout" type="MeshInstance" parent="ARVROrigin/ARVRCamera"]
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="OmniLight" type="DirectionalLight" parent="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 4 )
visible = false
light_energy = 0.2
light_indirect_energy = 0.1
light_specular = 0.2

[node name="RemoteInterface" type="Node" parent="ARVROrigin"]
script = ExtResource( 18 )

[node name="DemoTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="ARVROrigin/ARVRCamera/AreaHead" to="ARVROrigin/ARVRCamera/AreaHead" method="_on_AreaHead_body_entered"]
[connection signal="timeout" from="DemoTimer" to="." method="_on_DemoTimer_timeout"]
